force-app/main/default/objects/TMG_Category__c/TMG_Category__c.object-meta.xml
<CustomObject>
    <label>TMG Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMG Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>