force-app/main/default/objects/TMG_Category__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Tracking</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Written Deliverables</fullName>
            </value>
            <value>
                <fullName>Manager Debriefs</fullName>
            </value>
            <value>
                <fullName>Feedback Sessions</fullName>
            </value>
            <value>
                <fullName>Follow-On Coaching</fullName>
            </value>
            <value>
                <fullName>HR / Manager Check-ins</fullName>
            </value>
            <value>
                <fullName>Client Updates</fullName>
            </value>
            <value>
                <fullName>S&amp;E Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>