force-app/main/default/objects/TMG_Category__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all deliverables within the category are complete</description>
    <inlineHelpText>If checked, all deliverables within the category are complete</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>