force-app/main/default/objects/TMG_Category__c/fields/Draft_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Draft_Assessment__c</fullName>
    <label>Draft Assessment</label>
    <type>Date</type>
</CustomField>