force-app/main/default/objects/TMG_Category__c/fields/Draft_Coaching_Plan__c.field-meta.xml
<CustomField>
    <fullName>Draft_Coaching_Plan__c</fullName>
    <label>Draft Coaching Plan</label>
    <type>Date</type>
</CustomField>