force-app/main/default/objects/TMG_Category__c/fields/Draft_Key_Selection_Criteria_Revise_St__c.field-meta.xml
<CustomField>
    <fullName>Draft_Key_Selection_Criteria_Revise_St__c</fullName>
    <description>Deadline for 1st draft of Key Selection Criteria and/or revised Strawman</description>
    <inlineHelpText>Deadline for 1st draft of Key Selection Criteria and/or revised Strawman</inlineHelpText>
    <label>Draft Key Selection Criteria / Revise St</label>
    <type>Date</type>
</CustomField>