force-app/main/default/objects/TMG_Category__c/fields/Draft_Process_Document__c.field-meta.xml
<CustomField>
    <fullName>Draft_Process_Document__c</fullName>
    <description>Deadline for 1st draft of process document</description>
    <inlineHelpText>Deadline for 1st draft of process document</inlineHelpText>
    <label>Draft Process Document</label>
    <type>Date</type>
</CustomField>