force-app/main/default/objects/TMG_Category__c/fields/Draft_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Draft_Questionnaire__c</fullName>
    <description>Due date for interview questionnaire</description>
    <inlineHelpText>Due date for interview questionnaire</inlineHelpText>
    <label>Draft Questionnaire</label>
    <type>Date</type>
</CustomField>