force-app/main/default/objects/TMG_Category__c/fields/Draft_Questionnaire_Strawman__c.field-meta.xml
<CustomField>
    <fullName>Draft_Questionnaire_Strawman__c</fullName>
    <description>Deadline for 1st draft of questionnaire and/or Strawman</description>
    <inlineHelpText>Deadline for 1st draft of questionnaire and/or Strawman</inlineHelpText>
    <label>Draft Questionnaire / Strawman</label>
    <type>Date</type>
</CustomField>