force-app/main/default/objects/TMG_Category__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Board Evaluation</fullName>
            </value>
            <value>
                <fullName>Executive Assessment</fullName>
            </value>
            <value>
                <fullName>Executive Coaching</fullName>
            </value>
            <value>
                <fullName>Exutive Assessment with Coaching</fullName>
            </value>
            <value>
                <fullName>Key Selection Criteria</fullName>
            </value>
            <value>
                <fullName>Leadership Accelerator</fullName>
            </value>
            <value>
                <fullName>Succession</fullName>
            </value>
            <value>
                <fullName>Team Effectiveness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>