force-app/main/default/objects/TMG_Category__c/fields/Final_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Final_Assessment__c</fullName>
    <description>Due date of final written assessment</description>
    <inlineHelpText>Due date of final written assessment</inlineHelpText>
    <label>Final Assessment</label>
    <type>Date</type>
</CustomField>