force-app/main/default/objects/TMG_Category__c/fields/Final_Key_Selection_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Final_Key_Selection_Criteria__c</fullName>
    <description>Deadline for final Key Selection Criteria or offsite presentation</description>
    <inlineHelpText>Deadline for final Key Selection Criteria or offsite presentation</inlineHelpText>
    <label>Key Criteria / Offsite Presentation</label>
    <type>Date</type>
</CustomField>