force-app/main/default/objects/TMG_Category__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>Frequency of coaching sessions</description>
    <inlineHelpText>Frequency of coaching sessions</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Every 6 weeks</fullName>
            </value>
            <value>
                <fullName>See Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>