force-app/main/default/objects/TMG_Category__c/fields/Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off__c</fullName>
    <description>Start date</description>
    <inlineHelpText>Date of the first interview or reference</inlineHelpText>
    <label>Kick Off</label>
    <type>Date</type>
</CustomField>