force-app/main/default/objects/TMG_Category__c/fields/Late_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Late_Tasks__c</fullName>
    <label>Late Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>