force-app/main/default/objects/TMG_Category__c/fields/Number_of_in_person_meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_in_person_meetings__c</fullName>
    <description>Number of in-person meeting as outlined in the contract</description>
    <inlineHelpText>Number of in-person meeting as outlined in the contract</inlineHelpText>
    <label>Number of in-person meetings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>When practical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>