force-app/main/default/objects/TMG_Category__c/fields/Open_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Open_Assessments__c</fullName>
    <label>Open Assessments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>