force-app/main/default/objects/TMG_Category__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>TMG Categories</relationshipLabel>
    <relationshipName>TMG_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>