force-app/main/default/objects/TMG_Category__c/fields/Recently_KO_Complete_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Recently_KO_Complete_Assessments__c</fullName>
    <label>Recently KO/Complete Assessments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>