force-app/main/default/objects/TMG_Category__c/fields/Team_Offsite__c.field-meta.xml
<CustomField>
    <fullName>Team_Offsite__c</fullName>
    <description>Date of the scheduled offsite event</description>
    <inlineHelpText>Date of the scheduled offsite event</inlineHelpText>
    <label>Team Offsite</label>
    <type>Date</type>
</CustomField>