force-app/main/default/objects/TMG_Category__c/fields/TMG_Primary__c.field-meta.xml
<CustomField>
    <fullName>TMG_Primary__c</fullName>
    <formula>Opportunity_Name__r.TMG_Primary__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMG Primary</label>
    <type>Text</type>
</CustomField>