force-app/main/default/objects/TMG_Category__c/fields/TMG_Project__c.field-meta.xml
<CustomField>
    <fullName>TMG_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMG Project</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>TMG Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>