force-app/main/default/objects/TMG_Category__c/fields/Total_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Tasks__c</fullName>
    <label>Total Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>