force-app/main/default/objects/TMG_Category__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Coaching session type (e.g. in-person)</description>
    <inlineHelpText>Coaching session type (e.g. in-person)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combination (in-person, phone, video)</fullName>
                <default>true</default>
                <label>Combination (in-person, phone, video)</label>
            </value>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>