force-app/main/default/objects/TMG_Category__c/recordTypes/Basic_Category.recordType-meta.xml
<RecordType>
    <fullName>Basic_Category</fullName>
    <active>true</active>
    <description>Used for all client contact not specific to an opportunity</description>
    <label>BD Unspecified Client Contant</label>
</RecordType>