force-app/main/default/objects/TMG_Category__c/recordTypes/BD_Opportunities.recordType-meta.xml
<RecordType>
    <fullName>BD_Opportunities</fullName>
    <active>true</active>
    <description>Used for all new opportunities, the name field is a lookup to the Salesforce opportunity.</description>
    <label>BD Opportunities</label>
</RecordType>