force-app/main/default/objects/TMG_Category__c/recordTypes/Billing_Contract_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Billing_Contract_Tracking</fullName>
    <active>true</active>
    <description>Used for billing terms and contract reminders</description>
    <label>Billing/Contract Tracking</label>
</RecordType>