force-app/main/default/objects/TMG_Category__c/recordTypes/Board_Presentation.recordType-meta.xml
<RecordType>
    <fullName>Board_Presentation</fullName>
    <active>true</active>
    <description>Use for Board Meetings</description>
    <label>Board Presentation</label>
</RecordType>