force-app/main/default/objects/TMG_Category__c/recordTypes/Coaching.recordType-meta.xml
<RecordType>
    <fullName>Coaching</fullName>
    <active>true</active>
    <description>Follow-on coaching as part of the original assessment contract</description>
    <label>Coaching</label>
</RecordType>