force-app/main/default/objects/TMG_Category__c/recordTypes/Completed_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>Completed_Deliverables</fullName>
    <active>true</active>
    <description>Used to group completed deliverables</description>
    <label>Completed Deliverables</label>
</RecordType>