force-app/main/default/objects/TMG_Category__c/recordTypes/Data_Collection.recordType-meta.xml
<RecordType>
    <fullName>Data_Collection</fullName>
    <active>true</active>
    <label>Data Collection</label>
</RecordType>