force-app/main/default/objects/TMG_Category__c/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <description>Assessment Feedback Sessions</description>
    <label>Feedback</label>
</RecordType>