force-app/main/default/objects/TMG_Category__c/recordTypes/Manager_Debriefs.recordType-meta.xml
<RecordType>
    <fullName>Manager_Debriefs</fullName>
    <active>true</active>
    <label>Manager Debriefs</label>
</RecordType>