force-app/main/default/objects/TMG_Category__c/recordTypes/S_E_Profile.recordType-meta.xml
<RecordType>
    <fullName>S_E_Profile</fullName>
    <active>true</active>
    <label>S&amp;E Profile</label>
</RecordType>