force-app/main/default/objects/TMG_Category__c/recordTypes/Written_Deliverables.recordType-meta.xml
<RecordType>
    <fullName>Written_Deliverables</fullName>
    <active>true</active>
    <label>Written Deliverables</label>
</RecordType>